# DisSwitch

./: CMakeLists.txt  README.md
DisSwitchTray/: DisSwitchTray.sln
DisSwitchTray/DisSwitchTray/: DisSwitchTray.csproj  Form1.Designer.cs  Form1.cs  GlobalKeyboardHook.cs  Program.cs
DisSwitchTray/DisSwitchTray/Properties/: Resources.Designer.cs
exe/: CMakeLists.txt  WinapiHelper.cpp  WinapiHelper.hpp  source.cpp
lib/: CMakeLists.txt
lib/include/: CDSWrapper.h  CDSWrapper.hpp  PrintHelper.hpp  SDCDisplayInfo.hpp  SDCWrapper.h  SDCWrapper.hpp
lib/src/: CDSWrapper.cpp  PrintHelper.cpp  SDCDisplayInfo.cpp  SDCWrapper.cpp
